# mecalin

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  meson.build  messages.mo  org.gnome.mecalin-devel.yml
.github/workflows/: ci.yml
.kiro/: context.md
data/: gschemas.compiled  io.github.nacho.mecalin.gschema.xml  io.github.nacho.mecalin.metainfo.xml  meson.build  org.gnome.mecalin.desktop.in
data/keyboard_layouts/: es.json  fr.json  gl.json  it.json  pl.json  pt.json  us.json
data/lessons/: es.json  fr.json  gl.json  it.json  pl.json  pt.json  us.json
data/word_lists/: gl.txt
po/: LINGUAS  POTFILES.in  es.po  fr.po  gl.po  it.po  mecalin.pot  meson.build  pl.po  pt.po
resources/: resources.gresource.xml  style.css
resources/ui/: falling_keys_game.ui  lesson_view.ui  main_action_list.ui  main_menu.ui  preferences_view.ui  scrolling_lanes_game.ui  speed_test_results_view.ui  speed_test_text_view.ui  speed_test_view.ui  study_room.ui  target_text_view.ui  text_view.ui  typing_row.ui  window.ui
src/: application.rs  config.rs  course.rs  falling_keys_game.rs  hand_widget.rs  keyboard_widget.rs  lesson_view.rs  main.rs  main_action_list.rs  main_menu.rs  preferences_view.rs  scrolling_lanes_game.rs  speed_test_results_view.rs  speed_test_text_view.rs  speed_test_view.rs  study_room.rs  target_text_view.rs  text_generation.rs  text_utils.rs  text_view.rs  typing_row.rs  typing_test_utils.rs  utils.rs  window.rs
src/speed_test_text_view/: accessibility.rs  caret.rs  colors.rs  input.rs  scrolling.rs
