[package]
name = "mecalin"
version = "0.9.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
libadwaita = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
gio = "0.20"
glib = { version = "0.20", features = ["log_macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
i18n-format = "0.3"
rand = "0.8"
anyhow = "1.0"
unicode-segmentation = "1.12"
include_dir = "0.7"
strum = "0.26"
strum_macros = "0.26"

[build-dependencies]
glib-build-tools = "0.20"
regex = "1.11"
